tests/negative/class/class_protected_optional_method_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Optional chaining must still respect protected visibility outside the hierarchy.

class ProtectedDoor {
    protected open(): int {
        return 1;
    }
}

function main() {
    let maybe: Optional<ProtectedDoor> = new ProtectedDoor();
    print(maybe?.open());
}
